--- a/index.html
+++ b/index.html
@@ -8,5 +8,20 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img 
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" 
+    alt="A tired Lion"
+    title="Yawning"
+    />
+    <img 
+    src="https://res.cloudinary.com/practicaldev/image/fetch/s--8fC5BMsR--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_880/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/6eglv82k2iocbnsjdrlq.jpg"
+    alt="The end of the plane doesn't fit in the hangar so they mad a special door for it with a hole so it can fit"
+    title="It's not a bug, it's a feature"
+    />
+    <img
+    src="https://res.cloudinary.com/practicaldev/image/fetch/s--oZgcPHef--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_880/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/woov2cti0wx5bqj68we2.jpg"
+    alt="An image of a meme of a person talking mentally to itself and asking if the code is fine"
+    title="Programmers"
+    />
   </body>
 </html>
